--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </h1>
             <div class="mt-8">
                 <label for="teams-input" class="block text-lg font-medium text-gray-700 mb-2">
-                    参加者名を入力してください（1行に1名）:
+                    参加者の名前を入力してください（1行に1名）:
                 </label>
                 <textarea id="teams-input"
                     class="w-full h-40 p-4 border border-gray-300 rounded-xl focus:ring-blue-500 focus:border-blue-500 transition-colors"
