--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
             transform: translateX(-50%);
         }
     </style>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P66F01Z9GK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P66F01Z9GK');
+</script>
+
+    
 </head>
 <body class="bg-gray-100 min-h-screen p-4 flex items-center justify-center relative">
     
