--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
                 <a href="https://youtube.com/@ikumenrider?si=LXddF5sxgnGMxwHd" target="_blank" class="p-1 px-3 bg-gray-200 text-gray-900 rounded-lg text-sm font-bold transition-all duration-200 transform hover:scale-105 hover:bg-gray-300">
                     育面ライダー
                 </a>
+                 <!-- 全画面表示ボタンを追加 -->
+            <button id="fullscreen-btn" class="p-2 bg-gray-200 text-gray-700 rounded-lg text-sm font-bold transition-all duration-200 transform hover:scale-105 hover:bg-gray-300">
+                ▣
+            </button>
             </div>
             <!-- 新しく追加したdivでコンテンツを囲み、上部マージンを設定 -->
             <div class="mt-12 md:mt-16">
